--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,6 @@ set (CPACK_PACKAGE_VERSION_MAJOR "${jabsocket_VERSION_MAJOR}")
 set (CPACK_PACKAGE_VERSION_MINOR "${jabsocket_VERSION_MINOR}")
 set (CPACK_PACKAGE_VERSION_PATCH "${jabsocket_VERSION_PATCH}")
 
-SET(CPACK_RESOURCE_FILE_README "${PROJECT_SOURCE_DIR}/README")
+SET(CPACK_RESOURCE_FILE_README "${PROJECT_SOURCE_DIR}/README.md")
 include (CPack)
 
