--- a/test/jabsocket.conf
+++ b/test/jabsocket.conf
@@ -11,6 +11,10 @@ origin:
   - "http://firstdomain.com"
   - "http://seconddomain.com"
 
+# Host - the value of the Host key in the request must match
+# this parameter
+host: server.example.com
+
 # Minimum log level
 log_level: LOG_INFO
 
