Added support for limited-size buffer.

--- a/test/jabsocket.conf
+++ b/test/jabsocket.conf
@@ -22,3 +22,9 @@ resource: /mychat
 # Minimum log level
 log_level: LOG_INFO
 
+# Maximum WebSocket message size
+max_message_size: 128
+
+# Maximum frame size
+max_frame_size: 64
+
